tests/errors/trait-object-qualifier.ari
trait Score {
}

struct Holder {
  value: ref dyn Score,
}

fn main() -> i64 {
  0
}
